improve bug behaviour set z-index of beans by dragging

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,9 +29,8 @@ body{
         height: 1004px;
     }
     section#objects{
-        height: 598px;
+        height: 690px;
         width: 590px;
-        padding-top: 92px;
     }
     section#objects #object_stage{
         background: url(../img/stage_s.png) no-repeat;
@@ -75,6 +74,28 @@ body{
         left: 472px;
         top: 484px;
     }
+    #versailles{
+        left: 180px;
+        top: 222px;
+    }
+    #versailles #versailles_1{
+        background: url(../img/versailles_1.png) no-repeat;
+        width: 72px;
+        height: 149px;
+    }
+    #versailles #versailles_2{
+        background: url(../img/versailles_2.png) no-repeat;
+        width: 100px;
+        height: 129px;
+        left: 72px;
+        top: 20px;
+    }
+    #versailles #versailles_3{
+        background: url(../img/versailles_3.png) no-repeat;
+        width: 135px;
+        height: 149px;
+        left: 172px;
+    }
     #speech_bubble{
         background: url(../img/speech_bubble.png) no-repeat;
         font-size: 2em;
@@ -100,9 +121,8 @@ body{
         height: 2008px;
     }
     section#objects{
-        height: 1196px;
+        height: 1380px;
         width: 1180px;
-        padding-top: 184px;
     }
     section#objects #object_stage{
         background: url(../img/stage_s@2x.png) no-repeat;
@@ -145,6 +165,11 @@ body{
         background: url(../img/bean3@2x.png) no-repeat;
         left: 944px;
         top: 968px;
+    }
+    #versailles{
+        background: url(../img/versailles@2x.png) no-repeat;
+        left: 360px;
+        top: 444px;
     }
     #speech_bubble{
         background: url(../img/speech_bubble@2x.png) no-repeat;
@@ -353,6 +378,13 @@ section#objects .bean{
     position: absolute;
     z-index: 10;
 }
+#versailles{
+    position: absolute;
+    z-index: 15;
+}
+#versailles #versailles_1, #versailles #versailles_2, #versailles #versailles_3{
+    position: absolute;
+}
 #speech_bubble{
     position: absolute;
     display: none;
@@ -367,7 +399,7 @@ section#objects .bean{
     position:absolute;
     background-size: contain;
     display:none;
-    z-index: 5;
+    z-index: 20;
 }
 
 #coffeplay{
